--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@genkit-ai/googleai": "^1.14.1",
-    "@genkit-ai/next": "^1.14.1",
+    "@genkit-ai/firebase": "^1.19.2",
+    "@genkit-ai/googleai": "^1.19.2",
+    "@genkit-ai/next": "^1.19.2",
     "@hookform/resolvers": "^4.1.3",
     "@opentelemetry/exporter-jaeger": "^2.1.0",
     "@radix-ui/react-accordion": "^1.2.3",
@@ -43,7 +44,7 @@
     "dotenv": "^16.5.0",
     "embla-carousel-react": "^8.6.0",
     "firebase": "^11.9.1",
-    "genkit": "^1.14.1",
+    "genkit": "^1.19.2",
     "lucide-react": "^0.475.0",
     "next": "15.3.3",
     "next-themes": "^0.3.0",
@@ -55,6 +56,7 @@
     "recharts": "^2.15.1",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
+    "uuid": "^9.0.1",
     "zod": "^3.24.2"
   },
   "devDependencies": {
@@ -65,5 +67,8 @@
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
+  },
+  "resolutions": {
+    "uuid": "9.0.1"
   }
 }
